Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: If4efd7d3316b1782c9e502c75284a753fc9d692d

Former-commit-id: c92099367100b5e50bc5c9402797e3368f823bf0

--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -1397,8 +1397,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080 p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440 p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Volle resolusie gebruik meer van jou battery. As jy jou resolusie oorskakel, sal sommige programme dalk herbegin."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Gekies"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Kleure"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Natuurlik"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Gemaksimeer"</string>
@@ -1754,17 +1753,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Dit lyk of hierdie <xliff:g id="NAME_0">^1</xliff:g> stadig is. \n\nJy kan voortgaan, maar programme wat na hierdie ligging geskuif is, sal dalk vashaak, en dataoordragte kan lank vat. \n\nOorweeg dit om \'n vinniger <xliff:g id="NAME_1">^1</xliff:g> te gebruik vir beter werkverrigting."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Hoe sal jy hierdie <xliff:g id="NAME">^1</xliff:g> gebruik?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formateer SD-kaart vir interne berging"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Berg programme en media om slegs op hierdie tablet te gebruik. &lt;a href=https://support.google.com/android/answer/12153449&gt;Kom meer te wete oor hoe om ’n SD-kaart op te stel&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formateer"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formateer SD-kaart vir interne berging"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Berg programme en media om slegs op hierdie foon te gebruik. &lt;a href=https://support.google.com/android/answer/12153449&gt;Kom meer te wete oor hoe om ’n SD-kaart op te stel&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formateer"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Of"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formateer SD-kaart vir draagbare berging"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Berg foto\'s, video\'s, musiek en meer, en kry toegang daartoe van ander toestelle af. &lt;a href=https://support.google.com/android/answer/12153449&gt;Kom meer te wete oor hoe om ’n SD-kaart op te stel&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formateer"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Stel later op"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Formateer hierdie <xliff:g id="NAME">^1</xliff:g>?"</string>
