--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -1397,8 +1397,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"La resolució completa consumeix més bateria. Si canvies la resolució, és possible que algunes aplicacions es reiniciïn."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Seleccionada"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Colors"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturals"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Millorats"</string>
@@ -1754,21 +1753,18 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Sembla que <xliff:g id="NAME_0">^1</xliff:g> és lent. \n\nPots continuar, però les aplicacions que es desplacin a aquesta ubicació poden patir interrupcions i les transferències de dades poden tardar molt temps. \n\nPensa en la possibilitat de fer servir un <xliff:g id="NAME_1">^1</xliff:g> més ràpid per obtenir un rendiment millor."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Com utilitzaràs aquest suport (<xliff:g id="NAME">^1</xliff:g>)?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formata la targeta SD com a emmagatzematge intern"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Emmagatzema aplicacions i contingut multimèdia per fer-los servir només en aquesta tauleta. &lt;a href=https://support.google.com/android/answer/12153449&gt;Més informació sobre com pots configurar una targeta SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formata"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formata la targeta SD com a emmagatzematge intern"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Emmagatzema aplicacions i contingut multimèdia per fer-los servir només en aquest telèfon. &lt;a href=https://support.google.com/android/answer/12153449&gt;Més informació sobre com pots configurar una targeta SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formata"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"O"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formata la targeta SD com a emmagatzematge portàtil"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Emmagatzema fotos, vídeos, música i més, i accedeix-hi des d\'altres dispositius. &lt;a href=https://support.google.com/android/answer/12153449&gt;Més informació sobre com pots configurar una targeta SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formata"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Configura més tard"</string>
-    <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Vols formatar aquest suport (<xliff:g id="NAME">^1</xliff:g>)?"</string>
-    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Cal formatar aquest suport extern (<xliff:g id="NAME_0">^1</xliff:g>) per poder-hi emmagatzemar aplicacions, fitxers i contingut multimèdia. \n\nEn formatar-lo (<xliff:g id="NAME_1">^2</xliff:g>), se n\'esborrarà el contingut actual. Per tal d\'evitar que es perdi contingut, fes-ne còpies de seguretat en un altre dispositiu o <xliff:g id="NAME_2">^3</xliff:g>."</string>
+    <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Vols formatar aquesta <xliff:g id="NAME">^1</xliff:g>?"</string>
+    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Cal formatar la teva <xliff:g id="NAME_0">^1</xliff:g> per poder-hi emmagatzemar aplicacions, fitxers i contingut multimèdia. \n\nEn fer-ho, s\'esborrarà el contingut actual de <xliff:g id="NAME_1">^2</xliff:g>. Per tal d\'evitar que es perdi contingut, fes-ne còpies de seguretat en un altre dispositiu o <xliff:g id="NAME_2">^3</xliff:g>."</string>
     <string name="storage_wizard_format_confirm_v2_body_external" msgid="5810296966099830035">"Cal formatar aquesta <xliff:g id="NAME_0">^1</xliff:g> per emmagatzemar-hi fotos, vídeos, música i més. \n\nEn formatar-la, s\'esborrarà el contingut existent a <xliff:g id="NAME_1">^2</xliff:g>. Per tal d\'evitar que es perdi contingut, fes-ne una còpia de seguretat en una altra <xliff:g id="NAME_2">^3</xliff:g> o en un altre dispositiu."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"Formata (<xliff:g id="NAME">^1</xliff:g>)"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"Vols transferir el contingut (<xliff:g id="NAME">^1</xliff:g>)?"</string>
