--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -1753,17 +1753,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Dette <xliff:g id="NAME_0">^1</xliff:g> ser ud til at være langsomt. \n\nDu kan sagtens fortsætte, men apps, der er flyttet til denne lokation, vil muligvis hakke, og dataoverførsler kan tage længere tid. \n\nDu kan også skifte til et hurtigere <xliff:g id="NAME_1">^1</xliff:g> for at få en bedre ydeevne."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Hvordan vil du bruge dette <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatér SD-kort til intern lagerplads"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Gem apps og medier, som kun skal bruges på denne tablet. &lt;a href=https://support.google.com/android/answer/12153449&gt;Se, hvordan du konfigurerer et SD-kort&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatér"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatér SD-kort til intern lagerplads"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Gem apps og medier, som kun skal bruges på denne telefon. &lt;a href=https://support.google.com/android/answer/12153449&gt;Se, hvordan du konfigurerer et SD-kort&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatér"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Eller"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatér SD-kort til flytbar lagerplads"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Gem billeder, videoer, musik m.m., og få adgang til indholdet fra andre enheder. &lt;a href=https://support.google.com/android/answer/12153449&gt;Se, hvordan du konfigurerer et SD-kort&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatér"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Konfigurer senere"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Vil du formatere dette <xliff:g id="NAME">^1</xliff:g>?"</string>
