--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -62,8 +62,8 @@
     <string name="sdcard_setting" product="nosdcard" msgid="6071836464978826249">"Archivio USB"</string>
     <string name="sdcard_setting" product="default" msgid="3713462184783824923">"Scheda SD"</string>
     <string name="bluetooth" msgid="8898478620943459654">"Bluetooth"</string>
-    <string name="bluetooth_is_discoverable" msgid="4798961627677790935">"Visibile a tutti dispositivi Bluetooth vicini (<xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g>)"</string>
-    <string name="bluetooth_is_discoverable_always" msgid="8122823110652921674">"Visibile a tutti dispositivi Bluetooth vicini"</string>
+    <string name="bluetooth_is_discoverable" msgid="4798961627677790935">"Visibile a tutti i dispositivi Bluetooth vicini (<xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g>)"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8122823110652921674">"Visibile a tutti i dispositivi Bluetooth vicini"</string>
     <string name="bluetooth_not_visible_to_other_devices" msgid="6181960579190879601">"Non visibile ad altri dispositivi Bluetooth"</string>
     <string name="bluetooth_only_visible_to_paired_devices" msgid="3574936359739213455">"Visibile solo ai dispositivi accoppiati"</string>
     <string name="bluetooth_visibility_timeout" msgid="7611781967900196353">"Timeout visibilità"</string>
@@ -1397,8 +1397,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Se usi la massima risoluzione, viene consumata più batteria. La modifica della risoluzione potrebbe causare il riavvio di alcune app."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Selezionata"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Colori"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturali"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Migliorati"</string>
@@ -1754,17 +1753,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"La <xliff:g id="NAME_0">^1</xliff:g> sembra lenta. \n\nPuoi continuare, ma le app spostate in questa posizione potrebbero funzionare a intermittenza e i trasferimenti di dati potrebbero richiedere tempo. \n\nConsidera la possibilità di utilizzare una <xliff:g id="NAME_1">^1</xliff:g> più veloce per migliorare le prestazioni."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Come userai <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatta la scheda SD per l\'archiviazione interna"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Archivia app e contenuti multimediali da usare solo su questo tablet. &lt;a href=https://support.google.com/android/answer/12153449&gt;Scopri di più sulla configurazione di una scheda SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatta"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatta la scheda SD per l\'archiviazione interna"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Archivia app e contenuti multimediali da usare solo su questo telefono. &lt;a href=https://support.google.com/android/answer/12153449&gt;Scopri di più sulla configurazione di una scheda SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatta"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Oppure"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatta la scheda SD per archiviazione portatile"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Archivia foto, video, musica e tanto altro e accedi a questi contenuti da altri dispositivi. &lt;a href=https://support.google.com/android/answer/12153449&gt;Scopri di più sulla configurazione di una scheda SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatta"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Configura più tardi"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Vuoi formattare il dispositivo <xliff:g id="NAME">^1</xliff:g>?"</string>
