--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -1423,8 +1423,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Rezoluția maximă consumă mai multă baterie. Dacă schimbi rezoluția, unele aplicații pot reporni."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Selectată"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Culori"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturale"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Intensificate"</string>
@@ -1781,17 +1780,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Se pare că <xliff:g id="NAME_0">^1</xliff:g> are o viteză de transfer scăzută. \n\nPoți continua, dar aplicațiile mutate în această locație se pot bloca, iar transferurile pot dura mult timp. \n\nPentru o performanță mai bună, folosește un <xliff:g id="NAME_1">^1</xliff:g> cu o viteză de transfer mai ridicată."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Cum vei folosi acest <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatează cardul SD pentru memorie internă"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Stochează aplicații și conținut media pentru a le folosi doar pe această tabletă. &lt;a href=https://support.google.com/android/answer/12153449&gt;Află mai multe despre configurarea unui card SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatează"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatează cardul SD pentru memorie internă"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Stochează aplicații și conținut media pentru a le folosi doar pe acest telefon. &lt;a href=https://support.google.com/android/answer/12153449&gt;Află mai multe despre configurarea unui card SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatează"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Sau"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatează cardul SD pentru memorie portabilă"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Stochează fotografii, videoclipuri, muzică și altele și accesează-le de pe alte dispozitive. &lt;a href=https://support.google.com/android/answer/12153449&gt;Află mai multe despre configurarea unui card SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatează"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Configurează mai târziu"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Formatezi <xliff:g id="NAME">^1</xliff:g>?"</string>
