--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -1397,8 +1397,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Tam ayırdetmə dəqiqliyi batareyanızdan daha çox istifadə edir. Ayırdetmə dəqiqliyinin keçirilməsi bəzi tətbiqlərin yenidən başladılmasına səbəb ola bilər."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Seçilib"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Rənglər"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Təbii"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Dolğun"</string>
@@ -1754,17 +1753,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Bu <xliff:g id="NAME_0">^1</xliff:g> sürəti zəifdir. \n\nDavam edə bilərsiniz, amma bu məkana köçürülən tətbiqlər zəifləyə bilər və data transferi çox vaxt çəkə bilər. \n\nDaha yaxşı performans üçün sürətli <xliff:g id="NAME_1">^1</xliff:g> istifadə edin."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"<xliff:g id="NAME">^1</xliff:g> necə istifadə olunmalıdır?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Daxili yaddaş üçün SD kartı formatlayın"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Yalnız bu planşetdə istifadə ediləcək tətbiqləri &amp; medianı yadda saxlayın. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartın ayarlanması haqqında ətraflı məlumat əldə edin&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatlayın"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Daxili yaddaş üçün SD kartı formatlayın"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Yalnız bu telefonda istifadə ediləcək tətbiqləri &amp; medianı yadda saxlayın. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartın ayarlanması haqqında ətraflı məlumat əldə edin&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatlayın"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Və ya"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Portativ yaddaş üçün SD kartı formatlayın"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Fotoları, videoları, musiqiləri və daha çoxunu saxlayın və onlara digər cihazlardan daxil olun. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartın ayarlanması haqqında ətraflı məlumat əldə edin&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatlayın"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Sonra quraşdırın"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"<xliff:g id="NAME">^1</xliff:g> format edilsin?"</string>
