--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -1439,8 +1439,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Пры поўнай раздзяляльнасці хутчэй разраджаецца акумулятар. Пераключэнне на вашу раздзяляльнасць можа прывесці да перазапуску некаторых праграм."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Выбрана"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Колеры"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Натуральныя"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Яркія"</string>
@@ -1798,17 +1797,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Гэта <xliff:g id="NAME_0">^1</xliff:g>, здаецца, працуе павольна. \n\nВы можаце працягнуць, але ў дадатках, перанесеных у гэта сховішча, могуць адбывацца збоі, а перамяшчэнне даных можа займаць доўгі час. \n\nМагчыма, для лепшай прадукцыйнасці вам спатрэбіцца больш хуткая <xliff:g id="NAME_1">^1</xliff:g>."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Як выкарыстоўваць <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Фармаціраваць SD-карту для ўнутранага сховішча"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Захоўваць праграмы і мультымедыя для іх выкарыстання толькі на гэтым планшэце. &lt;a href=https://support.google.com/android/answer/12153449&gt;Даведацца больш пра наладжванне SD-карты&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Фармаціраваць"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Фармаціраваць SD-карту для ўнутранага сховішча"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Захоўваць праграмы і мультымедыя для іх выкарыстання толькі на гэтым тэлефоне. &lt;a href=https://support.google.com/android/answer/12153449&gt;Даведацца больш пра наладжванне SD-карты&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Фармаціраваць"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"або"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Фармаціраваць SD-карту для партатыўнага сховішча"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Захоўваць фота, відэа, музыку і іншае змесціва і атрымліваць да яго доступ з іншых прылад. &lt;a href=https://support.google.com/android/answer/12153449&gt;Даведацца больш пра наладжванне SD-карты&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Фармаціраваць"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Наладзіць пазней"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Адфармаціраваць прыладу \"<xliff:g id="NAME">^1</xliff:g>\"?"</string>
