--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -1397,8 +1397,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Bereizmen osoarekin bateria gehiago kontsumitzen da. Bereizmena aldatuz gero, baliteke aplikazio batzuk berrabiaraztea."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Hautatuta"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Koloreak"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturalak"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Nabarmenduak"</string>
@@ -1754,17 +1753,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"<xliff:g id="NAME_0">^1</xliff:g> hau motel dabilela dirudi. \n\nAurrera egin dezakezu, baina kokapen honetara eramandako aplikazioak eten egin daitezke eta datuak transferitzeko denbora gehiago behar izan daiteke. \n\n<xliff:g id="NAME_1">^1</xliff:g> bizkorragoa erabil dezakezu errendimendu hobea lortzeko."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Nola erabili nahi duzu <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formateatu SD txartela barneko memoria gisa"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Gorde aplikazioak eta multimedia-edukia tableta honetan bakarrik. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lortu SD txartel bat konfiguratzeari buruzko informazio gehiago&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formateatu"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formateatu SD txartela barneko memoria gisa"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Gorde aplikazioak eta multimedia-edukia gailu honetan bakarrik. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lortu SD txartel bat konfiguratzeari buruzko informazio gehiago&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formateatu"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Edo"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formateatu SD txartela biltegiratze-gailu eramangarri gisa"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Gorde argazkiak, bideoak, musika eta abar, eta atzitu edukia beste gailu batzuetatik. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lortu SD txartel bat konfiguratzeari buruzko informazio gehiago&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formateatu"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Konfiguratu geroago"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"<xliff:g id="NAME">^1</xliff:g> formateatu nahi al duzu?"</string>
@@ -1875,7 +1871,7 @@
     <string name="main_clear_progress_title" msgid="7239741132015617719">"Eduki guztia ezabatzen"</string>
     <string name="main_clear_progress_text" msgid="4636695115176327972">"Itxaron, mesedez…"</string>
     <string name="call_settings_title" msgid="2531072044177194164">"Dei-ezarpenak"</string>
-    <string name="call_settings_summary" msgid="8244293779053318053">"Konfiguratu erantzungailua, dei-desbideratzea, deia zain uzteko eginbidea, deien identifikazio-zerbitzua."</string>
+    <string name="call_settings_summary" msgid="8244293779053318053">"Konfiguratu erantzungailua, dei-desbideratzea, deia zain uzteko eginbidea, deitzailearen identitatea."</string>
     <string name="tether_settings_title_usb" msgid="5926474044238409099">"Konexioa partekatzea (USB)"</string>
     <string name="tether_settings_title_wifi" msgid="4327056146425282159">"Wifi-gune eramangarria"</string>
     <string name="tether_settings_title_bluetooth" msgid="8878813702520141084">"Konexioa partekatzea (Bluetooth)"</string>
