--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -1397,8 +1397,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"A teljes felbontás jobban igénybe veszi az akkumulátort. A felbontásra váltásakor előfordulhat, hogy néhány alkalmazás újraindul."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Kijelölve"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Színek"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Természetes"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Élénk"</string>
@@ -1754,17 +1753,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Ez a(z) <xliff:g id="NAME_0">^1</xliff:g> lassúnak tűnik. \n\nFolytathatja a folyamatot, de az erre a helyre áthelyezett alkalmazások akadozhatnak, az adatátviteli műveletek pedig hosszú ideig tarthatnak. \n\nGyorsabb <xliff:g id="NAME_1">^1</xliff:g> használatával javulhat a teljesítmény."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Hogyan használja a következőt: <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"SD-kártya formázása belső tárhelyként"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Alkalmazások és médiatartalmak tárolása csak ezen a táblagépen való használatra. &lt;a href=https://support.google.com/android/answer/12153449&gt;További információ az SD-kártya beállításáról&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formázás"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"SD-kártya formázása belső tárhelyként"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Alkalmazások és médiatartalmak tárolása csak ezen a telefonon való használatra. &lt;a href=https://support.google.com/android/answer/12153449&gt;További információ az SD-kártya beállításáról&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formázás"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"vagy"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"SD-kártya formázása hordozható tárhelyként"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Fotókat, videókat, zenéket és egyebeket tárolhat, és hozzájuk férhet más eszközökről. &lt;a href=https://support.google.com/android/answer/12153449&gt;További információ az SD-kártya beállításáról&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formázás"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Beállítás később"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Formázza a következőt: <xliff:g id="NAME">^1</xliff:g>?"</string>
