--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -1397,8 +1397,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Լրիվ լուծաչափը մարտկոցի լիցքն ավելի շատ է սպառում։ Այս լուծաչափին անցնելու դեպքում որոշ հավելվածներ կարող են վերագործարկվել։"</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Ընտրված է"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Գույներ"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Բնական"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Պայծառ"</string>
@@ -1754,17 +1753,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Կարծես թե, այս <xliff:g id="NAME_0">^1</xliff:g>-ը դանդաղ է: \n\nԿարող եք շարունակել, բայց այստեղ տեղափոխված հավելվածների աշխատանքը կարող է դանդաղել, իսկ տվյալների փոխանցումը՝ երկար տևել: \n\nԱռաջարկում ենք օգտագործել ավելի արագ <xliff:g id="NAME_1">^1</xliff:g>:"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Ինչպե՞ս եք օգտագործելու <xliff:g id="NAME">^1</xliff:g> հիշասարքը"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Ֆորմատավորել SD քարտը որպես ներքին հիշողություն"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Պահել հավելվածներ և մեդիաֆայլեր՝ միայն այս պլանշետում օգտագործելու համար։ &lt;a href=https://support.google.com/android/answer/12153449&gt;Իմանալ ավելին SD քարտերի կարգավորման մասին&lt;/a&gt;։"</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Ֆորմատավորել"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Ֆորմատավորել SD քարտը որպես ներքին հիշողություն"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Պահել հավելվածներ և մեդիաֆայլեր՝ միայն այս հեռախոսում օգտագործելու համար։ &lt;a href=https://support.google.com/android/answer/12153449&gt;Իմանալ ավելին SD քարտերի կարգավորման մասին&lt;/a&gt;։"</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Ֆորմատավորել"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Կամ"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Ֆորմատավորել SD քարտը որպես շարժական կրիչ"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Պահել լուսանկարներ, տեսանյութեր, երգեր և այլ բովանդակություն՝ այլ սարքերում օգտագործելու համար։ &lt;a href=https://support.google.com/android/answer/12153449&gt;Իմանալ ավելին SD քարտերի կարգավորման մասին&lt;/a&gt;։"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Ֆորմատավորել"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Կարգավորել ավելի ուշ"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Ֆորմատավորե՞լ այս <xliff:g id="NAME">^1</xliff:g>ը"</string>
