--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -1397,8 +1397,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Толық ажыратымдылық батарея зарядын көбірек пайдаланады. Ажыратымдылықты ауыстырсаңыз, кейбір қолданбалар өшіп қосылады."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Таңдалды."</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Түстер"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Табиғи"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Жарқын"</string>
@@ -1754,17 +1753,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Бұл <xliff:g id="NAME_0">^1</xliff:g> баяу сияқты. \n\nЖалғастыруға болады, бірақ бұл орынға жылжытылған қолданбалар баяулауы және дерек тасымалдары ұзақ уақыт алуы мүмкін. \n\nӨнімділікті арттыру үшін жылдамырақ <xliff:g id="NAME_1">^1</xliff:g> пайдаланыңыз."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Бұл <xliff:g id="NAME">^1</xliff:g> қалай қолданылады?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"SD картасын ішкі жад түрінде форматтау"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Қолданбалар мен медиафайлдарды тек осы планшетте пайдалану үшін сақтаңыз. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD картасын реттеу туралы толық ақпарат алыңыз&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Форматтау"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"SD картасын ішкі жад түрінде форматтау"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Қолданбалар мен медиафайлдарды тек осы телефонда пайдалану үшін сақтаңыз. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD картасын реттеу туралы толық ақпарат алыңыз&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Форматтау"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"немесе"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"SD картасын портативтік жад түрінде форматтау"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Фотосуреттерді, бейнелерді, музыка мен басқа мазмұнды сақтап, өзге құрылғылардан пайдаланыңыз. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD картасын реттеу туралы толық ақпарат алыңыз&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Форматтау"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Кейінірек реттеу"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Осы <xliff:g id="NAME">^1</xliff:g> форматталуы керек пе?"</string>
