--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -1417,8 +1417,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Izmantojot pilnu izšķirtspēju, tiek patērēts vairāk akumulatora enerģijas. Ja mainīsiet izšķirtspēju, noteiktas lietotnes var tikt restartētas."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Atlasīta"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Krāsas"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Dabiska"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Paspilgtināta"</string>
@@ -1775,17 +1774,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Šķiet, ka <xliff:g id="NAME_0">^1</xliff:g> darbojas lēni. \n\nVarat turpināt to izmanot, taču iespējams, ka lietotnes, kuras pārvietosiet uz šo atrašanās vietu, darbosies ar pārtraukumiem un datu pārsūtīšanai būs nepieciešams ilgs laiks. \n\nĀtrāka <xliff:g id="NAME_1">^1</xliff:g> varētu nodrošināt labāku veiktspēju."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Kā tiks izmantota ierīce <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatēt SD karti iekšējai atmiņai"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Uzglabājiet lietotnes un multivides failus izmantošanai tikai šajā planšetdatorā. &lt;a href=https://support.google.com/android/answer/12153449&gt;Uzziniet vairāk par SD kartes iestatīšanu&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatēt"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatēt SD karti iekšējai atmiņai"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Uzglabājiet lietotnes un multivides failus izmantošanai tikai šajā tālrunī. &lt;a href=https://support.google.com/android/answer/12153449&gt;Uzziniet vairāk par SD kartes iestatīšanu&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatēt"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Vai"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatēt SD karti pārnēsājamai krātuvei"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Uzglabājiet fotoattēlus, videoklipus, mūziku un citu saturu, lai varētu tam piekļūt no citām ierīcēm. &lt;a href=https://support.google.com/android/answer/12153449&gt;Uzziniet vairāk par SD kartes iestatīšanu&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatēt"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Iestatīt vēlāk"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Vai formatēt šo: <xliff:g id="NAME">^1</xliff:g>?"</string>
