--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -1437,8 +1437,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p, FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p, QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Pełna rozdzielczość bardziej zużywa baterię. Po przełączeniu rozdzielczości niektóre aplikacje mogą wymagać ponownego uruchomienia."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Wybrano"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Kolory"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturalne"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Wzmocnione"</string>
@@ -1796,17 +1795,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Wygląda na to, że nośnik <xliff:g id="NAME_0">^1</xliff:g> jest powolny. \n\nNadal możesz z niego korzystać, ale przeniesione aplikacje mogą się zacinać, a przesyłanie danych może długo trwać. \n\nWydajność może poprawić inny nośnik <xliff:g id="NAME_1">^1</xliff:g>."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Jak będziesz używać nośnika <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Sformatuj kartę SD jako pamięć wewnętrzną"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Przechowuj aplikacje i multimedia tylko do użytku na tym tablecie. &lt;a href=https://support.google.com/android/answer/12153449&gt;Więcej informacji o konfigurowaniu kart SD&lt;/a&gt;"</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Sformatuj"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Sformatuj kartę SD jako pamięć wewnętrzną"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Przechowuj aplikacje i multimedia tylko do użytku na tym telefonie. &lt;a href=https://support.google.com/android/answer/12153449&gt;Więcej informacji o konfigurowaniu kart SD&lt;/a&gt;"</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Sformatuj"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"lub"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Sformatuj kartę SD jako pamięć przenośną"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Przechowuj zdjęcia, filmy, muzykę oraz inne treści i korzystaj z nich na różnych urządzeniach. &lt;a href=https://support.google.com/android/answer/12153449&gt;Więcej informacji o konfigurowaniu kart SD&lt;/a&gt;"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Sformatuj"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Skonfiguruj później"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Sformatować: <xliff:g id="NAME">^1</xliff:g>?"</string>
