--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -1403,7 +1403,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Asl hajmda koʻproq batareya quvvati sarflanadi. Tiniqlik almashtirilsa, ayrim ilovalar qayta ishga tushadi."</string>
-    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Tanlangan"</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Tanlandi"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Ranglar"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Tabiiy"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Yorqin"</string>
