Add link to more app settings
Test: MoreSettingsPreferenceControllerTest
Test: test app that can handle the settings intent
Bug: 236932102
Change-Id: Iae778c93057e47aa0f664d3faab21640b2cd5193

Former-commit-id: 9ef3cf257299c3dcd2b2b3305739790aaf65b0f5

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8017,6 +8017,8 @@
     <string name="notif_listener_excluded_app_summary">Change settings for each app that sends notifications</string>
     <string name="notif_listener_excluded_app_screen_title">Apps shown on device</string>
     <string name="notif_listener_not_migrated">This app doesn\u2019t support enhanced settings</string>
+    <string name="notif_listener_more_settings">More settings</string>
+    <string name="notif_listener_more_settings_desc">More settings are available inside this app</string>
 
     <!-- Title for managing VR (virtual reality) helper services. [CHAR LIMIT=50] -->
     <string name="vr_listeners_title">VR helper services</string>
